--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ MarkupSafe==1.1.1
 psycopg2==2.8.6
 python-dotenv==0.17.0
 SQLAlchemy==1.4.10
+SQLAlchemy-serializer==1.3.4.4
 typing-extensions==3.7.4.3
 Werkzeug==1.0.1
 WTForms==2.3.3
