--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ importlib-metadata==4.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+mcrcon==0.6.0
 psycopg2==2.8.6
 python-dotenv==0.17.0
 SQLAlchemy==1.4.10
